array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var max:Int = 0
  var min:Int = 0
  var camonte:Boolean = true
  for (k <- 0 to num.length-1){
    if (camonte ==true){
      if(num(k)-num(k+1)<=0){
        camonte = false
				max      
      }
    }
    
  }
}